--- a/SimpleHub/app/src/main/res/layout/activity_myprofile.xml
+++ b/SimpleHub/app/src/main/res/layout/activity_myprofile.xml
@@ -22,33 +22,13 @@
         tools:layout_editor_absoluteY="383dp"
         app:layout_constraintTop_toTopOf="parent"/>
 
-
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/navigationBar"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="center">
-
-            <TextView
-                android:id="@+id/profile"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="60dp"
-                android:text="My Profile"
-                android:textSize="22dp"
-                android:textColor="@color/colorAccent"
-                />
-
-        </android.support.v7.widget.Toolbar>
-
-
-    </android.support.constraint.ConstraintLayout>
-
+    <include
+        layout="@layout/app_bar_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="383dp"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
     <android.support.design.widget.NavigationView
