--- a/SimpleHub/app/src/main/res/values/colors.xml
+++ b/SimpleHub/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#78909C</color>
     <color name="colorAccent">#4B636E</color>
     <color name="buttonText">#FFF</color>
+    <color name="IDtext">#2D87B0</color>
 </resources>
