--- a/SimpleHub/app/src/main/res/layout/activity_main.xml
+++ b/SimpleHub/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent" />
 
     <android.support.design.widget.NavigationView
-        android:id="@+id/navView"
+        android:id="@+id/main_navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
