--- a/SimpleHub/app/src/main/res/layout/activity_myprofile.xml
+++ b/SimpleHub/app/src/main/res/layout/activity_myprofile.xml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/profileDrawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-
-    <include
-        layout="@layout/activity_profile"
-        android:layout_width="match_parent"
+    <android.support.design.widget.CoordinatorLayout
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="383dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_width="wrap_content" >
 
-    <include
-        layout="@layout/activity_profile_tab"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="383dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        <include
+            layout="@layout/app_bar_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="127dp"
+            tools:layout_editor_absoluteY="383dp"
+            app:layout_constraintTop_toTopOf="parent"/>
 
-    <include
-        layout="@layout/app_bar_navigation"
-        android:layout_width="match_parent"
+        <include
+            layout="@layout/activity_profile"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="127dp"
+            tools:layout_editor_absoluteY="383dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <android.support.v4.widget.NestedScrollView
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="127dp"
-        tools:layout_editor_absoluteY="383dp"
-        app:layout_constraintTop_toTopOf="parent"/>
+        android:layout_width="wrap_content" >
+
+        <include
+            layout="@layout/activity_profile_tab"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="127dp"
+            tools:layout_editor_absoluteY="383dp"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    </android.support.v4.widget.NestedScrollView>
+    </android.support.design.widget.CoordinatorLayout>
 
 
     <android.support.design.widget.NavigationView
@@ -39,7 +51,6 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main"
         app:menu="@menu/activity_main_drawer" />
-
 
 
 </android.support.v4.widget.DrawerLayout>
