--- a/SimpleHub/app/src/main/res/layout/app_bar_navigation.xml
+++ b/SimpleHub/app/src/main/res/layout/app_bar_navigation.xml
@@ -1,31 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="42dp">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/navigationBar"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            app:layout_scrollFlags="scroll|enterAlways"
             android:layout_gravity="center">
-
 
             <ImageView
                 android:id="@+id/searchIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="16dp"
                 android:layout_gravity="right"
+                android:layout_marginRight="16dp"
                 android:contentDescription="search icon"
                 android:src="@drawable/ic_search"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent" />
 
             <TextView
                 android:id="@+id/profile"
@@ -34,13 +36,10 @@
                 android:layout_gravity="left"
                 android:layout_marginLeft="60dp"
                 android:text="My Profile"
-                android:textSize="22dp"
                 android:textColor="#FFFFFF"
-                />
+                android:textSize="22dp" />
 
         </android.support.v7.widget.Toolbar>
-
-
 
     </android.support.design.widget.AppBarLayout>
 
