--- a/SimpleHub/app/src/main/res/layout/nav_header_main.xml
+++ b/SimpleHub/app/src/main/res/layout/nav_header_main.xml
@@ -10,49 +10,49 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
-        android:id="@+id/ownerAvatarImage"
+        android:id="@+id/ownerAvatarImage_drawer"
         android:layout_width="81dp"
         android:layout_height="83dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="48dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:src="@drawable/ic_github"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.253" />
+        app:layout_constraintVertical_bias="0.22" />
 
     <TextView
-        android:id="@+id/nameText"
+        android:id="@+id/nameText_drawer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:text="Goo"
-        android:textSize="25dp"
         android:textColor="@color/colorAccent"
-        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
+        android:textSize="23dp"
+        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage_drawer"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/IDText"
+        android:id="@+id/IDText_drawer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginStart="10dp"
         android:text="hyun"
-        android:textSize="20dp"
         android:textColor="@color/colorAccent"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
-        app:layout_constraintTop_toBottomOf="@+id/nameText"
+        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage_drawer"
+        app:layout_constraintTop_toBottomOf="@+id/nameText_drawer"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
+        android:id="@+id/signoutButton"
         style="@style/Base.Widget.AppCompat.Button.Colored"
-        android:layout_width="91dp"
-        android:layout_height="35dp"
+        android:layout_width="263dp"
+        android:layout_height="41dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -61,9 +61,9 @@
         android:textColor="@color/buttonText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.209"
+        app:layout_constraintHorizontal_bias="0.27"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ownerAvatarImage"
-        app:layout_constraintVertical_bias="0.466" />
+        app:layout_constraintTop_toBottomOf="@+id/ownerAvatarImage_drawer"
+        app:layout_constraintVertical_bias="0.529" />
 
 </android.support.constraint.ConstraintLayout>
