--- a/SimpleHub/app/src/main/res/layout/activity_myprofile.xml
+++ b/SimpleHub/app/src/main/res/layout/activity_myprofile.xml
@@ -1,47 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/profileDrawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="match_parent">
+
+    <include
+        layout="@layout/app_bar_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="127dp"
+        tools:layout_editor_absoluteY="383dp" />
 
     <android.support.design.widget.CoordinatorLayout
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content" >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-        <include
-            layout="@layout/app_bar_navigation"
+        <android.support.design.widget.AppBarLayout
+            android:id="@+id/profileBar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="127dp"
-            tools:layout_editor_absoluteY="383dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            app:layout_constraintRight_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp">
 
-        <include
-            layout="@layout/activity_profile"
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_scrollFlags="scroll|enterAlways">
+
+                <android.support.constraint.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <ImageView
+                        android:id="@+id/ownerAvatarImage"
+                        android:layout_width="104dp"
+                        android:layout_height="105dp"
+                        android:layout_marginBottom="8dp"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="8dp"
+                        android:src="@drawable/ic_github"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="0.0" />
+
+                    <TextView
+                        android:id="@+id/nameText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="16dp"
+                        android:text="Goo"
+                        android:textSize="25dp"
+                        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
+                        android:id="@+id/IDText"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="24dp"
+                        android:text="hyun"
+                        android:textSize="20dp"
+                        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
+                        tools:layout_editor_absoluteY="58dp" />
+
+                    <TextView
+                        android:id="@+id/emailText"
+                        android:layout_width="108dp"
+                        android:layout_height="19dp"
+                        android:layout_marginStart="24dp"
+                        android:layout_marginTop="8dp"
+                        android:text="heidi@gmail.com"
+                        app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
+                        app:layout_constraintTop_toBottomOf="@+id/IDText" />
+
+
+                </android.support.constraint.ConstraintLayout>
+
+
+            </android.support.v7.widget.Toolbar>
+
+        </android.support.design.widget.AppBarLayout>
+
+
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="127dp"
-            tools:layout_editor_absoluteY="383dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.v4.widget.NestedScrollView
-        android:layout_height="match_parent"
-        android:layout_width="wrap_content" >
+
+        </android.support.v4.widget.NestedScrollView>
 
         <include
             layout="@layout/activity_profile_tab"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="127dp"
-            tools:layout_editor_absoluteY="383dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            tools:layout_editor_absoluteY="383dp" />
 
-    </android.support.v4.widget.NestedScrollView>
     </android.support.design.widget.CoordinatorLayout>
-
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
