--- a/SimpleHub/app/src/main/res/layout/activity_profile.xml
+++ b/SimpleHub/app/src/main/res/layout/activity_profile.xml
@@ -25,7 +25,6 @@
                 android:layout_height="match_parent">
 
                 <ImageView
-                    android:id="@+id/ownerAvatarImage"
                     android:layout_width="104dp"
                     android:layout_height="105dp"
                     android:layout_marginBottom="8dp"
@@ -38,10 +37,9 @@
                     app:layout_constraintVertical_bias="0.0" />
 
                 <TextView
-                    android:id="@+id/nameText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="16dp"
                     android:text="Goo"
                     android:textSize="25dp"
@@ -49,24 +47,18 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/IDText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="2dp"
+                    android:layout_marginStart="24dp"
                     android:text="hyun"
                     android:textSize="20dp"
-                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
-                    app:layout_constraintTop_toBottomOf="@+id/nameText"
-                    app:layout_constraintVertical_bias="0.0" />
+                    tools:layout_editor_absoluteY="58dp" />
 
                 <TextView
-                    android:id="@+id/emailText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_width="108dp"
+                    android:layout_height="19dp"
+                    android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
                     android:text="heidi@gmail.com"
                     app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
