--- a/SimpleHub/app/src/main/res/layout/activity_profile_tab.xml
+++ b/SimpleHub/app/src/main/res/layout/activity_profile_tab.xml
@@ -8,9 +8,10 @@
     android:layout_height="match_parent"
     tools:context=".ui.ProfileActivity">
 
+
     <android.support.design.widget.TabLayout
-        android:id="@+id/tabLayout"
-        android:layout_marginTop="181dp"
+        android:id="@+id/tab_issue"
+        android:layout_marginTop="60dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
@@ -18,8 +19,10 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+        android:id="@+id/pager_issue"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
 
 </LinearLayout>
