--- a/app/src/main/res/layout/activity_pull_request.xml
+++ b/app/src/main/res/layout/activity_pull_request.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/pulls_drawer"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-
     <include
-        layout="@layout/app_bar_issue"
+        layout="@layout/app_bar_pulls"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="127dp"
         tools:layout_editor_absoluteY="383dp" />
+
     <include
         layout="@layout/activity_profile_tab"
         android:layout_width="match_parent"
@@ -21,9 +22,8 @@
         tools:layout_editor_absoluteX="127dp"
         tools:layout_editor_absoluteY="383dp" />
 
-
     <android.support.design.widget.NavigationView
-        android:id="@+id/navView_issue"
+        android:id="@+id/navView_pulls"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
@@ -32,4 +32,4 @@
         app:menu="@menu/activity_main_drawer" />
 
 
-</android.support.constraint.ConstraintLayout>
+</android.support.v4.widget.DrawerLayout>
