파일 내용 띄움

--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -15,6 +15,7 @@
 
    <TextView
        android:id="@+id/file"
+       android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
 
