--- a/app/src/main/res/layout/activity_file.xml
+++ b/app/src/main/res/layout/activity_file.xml
@@ -17,7 +17,9 @@
        android:id="@+id/file"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
-       android:layout_height="match_parent" />
+       android:layout_height="match_parent"
+       android:scrollbars="vertical"
+       />
 
 
 </android.support.constraint.ConstraintLayout>
