--- a/app/src/main/res/layout/item_repo_contributor.xml
+++ b/app/src/main/res/layout/item_repo_contributor.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/ownerAvatarImage"
+            android:id="@+id/loginAvatarImage"
             android:layout_width="62dp"
             android:layout_height="49dp"
             android:layout_marginBottom="8dp"
@@ -27,19 +27,40 @@
 
 
         <TextView
-            android:id="@+id/IDText"
+            android:id="@+id/loginText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="none"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:text="hyun"
+            android:textColor="@color/IDtext"
+            android:textSize="15dp"
+            app:layout_constraintStart_toEndOf="@+id/loginAvatarImage"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/contributionNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="20dp"
-            android:text="hyun"
-            android:textColor="@color/IDtext"
-            android:textSize="20dp"
+            android:layout_marginTop="4dp"
+            android:text="20"
+            android:textSize="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/ownerAvatarImage"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintStart_toEndOf="@+id/loginAvatarImage"
+            app:layout_constraintTop_toBottomOf="@+id/loginText" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:layout_marginStart="8dp"
+            android:text="commits"
+            android:textSize="10dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/contributionNumber" />
 
 
     </android.support.constraint.ConstraintLayout>
