add activity repo contributors/commits & use startActivityForResult & add time format method

--- a/app/src/main/res/layout/activity_repository.xml
+++ b/app/src/main/res/layout/activity_repository.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/repoMenu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:background="#080808">
 
 
     <include
@@ -22,11 +24,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
+
     <android.support.v4.view.ViewPager
         android:id="@+id/pager_contributor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
     <android.support.design.widget.FloatingActionButton
@@ -41,6 +45,35 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_menu_more" />
 
+    <TextView
+        android:id="@+id/text_contributor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="108dp"
+        android:layout_marginEnd="5dp"
+        android:text="contributor"
+        android:textSize="18dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/text_commit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="180dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="220dp"
+        android:text="commit"
+        android:textSize="18dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline2"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/contributor_button"
         android:layout_width="wrap_content"
@@ -48,6 +81,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_contributor"
         android:visibility="invisible"
         app:backgroundTint="#ffffff"
         app:elevation="6dp"
@@ -62,6 +96,7 @@
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
+        android:src="@drawable/ic_timelapse"
         android:visibility="invisible"
         app:backgroundTint="#ffffff"
         app:elevation="6dp"
@@ -69,6 +104,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:pressedTranslationZ="12dp" />
 
+    <android.support.constraint.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="310dp" />
 
 
 </android.support.constraint.ConstraintLayout>
