--- a/app/src/main/res/layout/app_bar_repo.xml
+++ b/app/src/main/res/layout/app_bar_repo.xml
@@ -17,7 +17,8 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             app:layout_scrollFlags="scroll|enterAlways"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            >
 
             <TextView
                 android:id="@+id/bar_repo_text"
