userApi를 전체 user를 받을 수 있는 Path로 변경, follower, folloing, star로 다른 사용자의 정보를 받아올 수 있게 했다.

--- a/app/src/main/res/layout/activity_dir.xml
+++ b/app/src/main/res/layout/activity_dir.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <include
-        layout="@layout/app_bar_dir"
+        layout="@layout/app_bar_navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
