--- a/app/src/main/res/layout/activity_myprofile.xml
+++ b/app/src/main/res/layout/activity_myprofile.xml
@@ -17,7 +17,7 @@
             android:id="@+id/profileBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="56dp"
             app:layout_constraintRight_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="0dp">
@@ -31,7 +31,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/ownerAvatarImage"
                         android:layout_width="104dp"
                         android:layout_height="105dp"
