--- a/app/src/main/res/layout/activity_issue.xml
+++ b/app/src/main/res/layout/activity_issue.xml
@@ -8,7 +8,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <include
-        layout="@layout/app_bar_issue"
+        layout="@layout/app_bar_navigation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
