--- a/app/src/main/res/layout/app_bar_navigation.xml
+++ b/app/src/main/res/layout/app_bar_navigation.xml
@@ -18,14 +18,11 @@
             app:layout_scrollFlags="scroll|enterAlways"
             android:layout_gravity="center">
 
-
-
             <TextView
                 android:id="@+id/profile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="left"
-                android:layout_marginLeft="60dp"
+                android:layout_gravity="center"
                 android:text="My Profile"
                 android:textColor="#FFFFFF"
                 android:textSize="22dp" />
