--- a/app/src/main/res/menu/fragment_search.xml
+++ b/app/src/main/res/menu/fragment_search.xml
@@ -5,7 +5,5 @@
         android:id="@+id/menuItemSearch"
         android:title="@string/search_hint"
         app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="ifRoom" />
-
-
+        app:showAsAction="always" />
 </menu>
