--- a/app/src/main/res/layout/head_repo.xml
+++ b/app/src/main/res/layout/head_repo.xml
@@ -7,7 +7,7 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="388dp"
+        android:layout_width="match_parent"
         android:layout_height="36dp"
         android:layout_marginTop="60dp"
         android:background="#A7C0CD"
@@ -39,6 +39,7 @@
             app:layout_constraintTop_toTopOf="@+id/toolbar2"
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/ic_star" />
+
 
     </android.support.v7.widget.Toolbar>
 
